<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>scc2425</groupId>
	<artifactId>tukano</artifactId>
	<version>1</version>
	<packaging>war</packaging>
	<properties>
		<azure.config.path>/usr/local/tomcat/webapps/ROOT/WEB-INF/classes</azure.config.path>
		<docker.config.path>/usr/local/tomcat/webapps/tukano/WEB-INF/classes</docker.config.path>
		<azure.functions.maven.plugin.version>1.36.0</azure.functions.maven.plugin.version>
		<azure.functions.java.library.version>3.1.0</azure.functions.java.library.version>
		<functionAppName>fun70666northeurope</functionAppName>
		<functionRegion>westeurope</functionRegion>
		<functionStorageAccountName>sto70666northeurope</functionStorageAccountName>
		<functionResourceGroup>rg70666-northeurope</functionResourceGroup>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<authors>xxxxx-xxxxx</authors>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>com.microsoft.azure</groupId>
				<artifactId>azure-webapp-maven-plugin</artifactId>
				<version>2.13.0</version>
			    <configuration>
                    <schemaVersion>v2</schemaVersion>
                    <resourceGroup>rg70666-northeurope</resourceGroup>
                    <appName>tukano-70056-70666</appName>
                    <pricingTier>F1</pricingTier>
                    <region>westeurope</region>
					<appSettings>
						<property>
							<name>CONFIG_PATH</name>
							<value>${azure.config.path}</value>
						</property>
					</appSettings>
			        <runtime>
			            <os>Linux</os>
			            <javaVersion>Java 17</javaVersion>
			            <webContainer>Tomcat 10.0</webContainer>
			        </runtime>
			        <deployment>
			            <resources>
			                <resource>
			                    <directory>${project.basedir}/target</directory>
			                    <includes>
			                        <include>*.war</include>
			                    </includes>
			                </resource>
			            </resources>
			        </deployment>
			    </configuration>
			</plugin>
			<plugin>
			<groupId>com.microsoft.azure</groupId>
			<artifactId>azure-functions-maven-plugin</artifactId>
			<version>${azure.functions.maven.plugin.version}</version>
			<configuration>
				<appName>${functionAppName}</appName>
				<storageAccountName>${functionStorageAccountName}</storageAccountName>
				<resourceGroup>${functionResourceGroup}</resourceGroup>
				<region>${functionRegion}</region>
				<disableAppInsights>false</disableAppInsights>
				<buildJarWithDependencies>false</buildJarWithDependencies>
				<runtime>
					<javaVersion>17</javaVersion>
				</runtime>
				<appSettings>
					<property>
						<name>FUNCTIONS_EXTENSION_VERSION</name>
						<value>~4</value>
					</property>
				</appSettings>
			</configuration>
			<executions>
				<execution>
					<id>package-functions</id>
					<goals>
						<goal>package</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<url>http://maven:s3cret@127.0.0.1:8080/manager/text</url>
					<server>tomcat-docker</server>
					<update>true</update>
					<path>/tukano</path>
					<username>maven</username>
					<password>s3cret</password>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.4.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive/>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.44.0</version>
				<configuration>
					<images>
						<image>
							<name>${authors}/${project.artifactId}</name>
							<build>
								<dockerFile>${project.basedir}/Dockerfile</dockerFile>
							</build>
						</image>
					</images>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>com.microsoft.azure.functions</groupId>
			<artifactId>azure-functions-java-library</artifactId>
			<version>${azure.functions.java.library.version}</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-cosmos</artifactId>
			<version>4.63.3</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>1.7.36</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-storage-blob</artifactId>
			<version>12.28.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.0.0-jre</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>3.1.5</version>
		</dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-c3p0</artifactId>
            <version>6.4.4.Final</version>
        </dependency>
        <dependency>
            <groupId>com.mchange</groupId>
            <artifactId>c3p0</artifactId>
            <version>0.9.5.5</version>
        </dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-jdk-http</artifactId>
			<version>3.1.5</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-moxy</artifactId>
			<version>3.1.9</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>3.1.5</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>6.4.4.Final</version>
		</dependency>
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-servlet-initializer</artifactId>
			<version>6.2.10.Final</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.resteasy</groupId>
			<artifactId>resteasy-jackson2-provider</artifactId>
			<version>6.2.10.Final</version>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>5.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-hikaricp</artifactId>
			<version>6.2.13.Final</version>
		</dependency>
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>2.9.0</version>
			<type>jar</type>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet</artifactId>
			<version>3.1.5</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet-core</artifactId>
			<version>3.1.5</version>
		</dependency>
	</dependencies>
</project>
